# smartcore-benches

./: Cargo.toml  README.md
benches/: distance.rs  fastpair.rs  linear.rs  naive_bayes.rs
