[package]
name = "smartcore-benches"
description = "Benches for smartcore"
homepage = "https://smartcorelib.org"
version = "0.1.0"
authors = ["SmartCore Developers"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/smartcore"
repository = "https://github.com/smartcorelib/smartcore"
readme = "README.md"
keywords = ["machine-learning", "statistical", "ai", "optimization", "linear-algebra"]
categories = ["science"]

[dependencies]
smartcore = { git = "https://github.com/smartcorelib/smartcore", branch = "v0.5-wip", features = ["ndarray-bindings"] }
itertools = { version = "0.10.3", optional = true }
ndarray = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
serde_json = "1.0"
bincode = "1.3.1"

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "naive_bayes"
harness = false

[[bench]]
name = "fastpair"
harness = false
