[package]
name = "smartcore-benches"
description = "Benches for smartcore"
homepage = "https://smartcorelib.org"
version = "0.1.0"
authors = ["SmartCore Developers"]
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/smartcore"
repository = "https://github.com/smartcorelib/smartcore"
readme = "README.md"
keywords = ["machine-learning", "statistical", "ai", "optimization", "linear-algebra"]
categories = ["science"]

[dependencies]
smartcore = { version = "0.3", features = ["ndarray-bindings"] }
itertools = { version = "0.10.3"}
ndarray = "0.15"
criterion = { version = "0.4", default-features = false }
serde_json = "1.0"
bincode = "1.3.1"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rand_distr = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
typetag = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "naive_bayes"
harness = false

[[bench]]
name = "fastpair"
harness = false

[[bench]]
name = "linear"
harness = false
